# src/generated/swagger.json
@@ -16,6 +16,13 @@
 			},
 			"GetLinksResponse": {
 				"properties": {
+					"metacriticScore": {
+						"type": "number",
+						"format": "double"
+					},
+					"metacriticUrl": {
+						"type": "string"
+					},
 					"spotifyUrl": {
 						"type": "string"
 					},
