# src/types/api.ts
@@ -5,6 +5,8 @@ export interface ErrorResponse {
 export type ItemType = 'album' | 'track';
 
 export interface GetLinksResponse {
+    metacriticScore?: number;
+    metacriticUrl?: string;
     spotifyUrl?: string;
     bandcampUrl: string;
     appleMusicUrl?: string;
@@ -15,4 +17,3 @@ export interface GetLinksResponse {
     artistName: string;
     itemType?: ItemType;
 }
-
